refactor: remove css-specific terminology from server
